# cmake4eclipse-sample-projects

./: .gitmodules  README.md
C-1src/: .cproject  .project
C-1src/src/: CMakeLists.txt
C-flat/: .cproject  .project  CMakeLists.txt
C-in-docker/: .cproject  .project  CMakeLists.txt
C-in-docker/src/: CMakeLists.txt
C-inclpaths/: .cproject  .project  CMakeLists.txt
C-inclpaths/include/: included.h
C-inclpaths/src/: CMakeLists.txt  config.h.in  main.c  main2.cpp
C-inclpaths/src/include/: included.h
C-multiconfig/: .cproject  .project  CMakeLists.txt
C-subsrc/: .cproject  .project
C-subsrc/src/: CMakeLists.txt
cuda/: .cproject  .project  CMakeLists.txt  README.md
cuda/src/: CMakeLists.txt  hello-cuda.cu  main.c.off
gnucash/: .cproject  .project  README.md
